# crafting-interpreters

./: .gitignore  LICENSE  progress.md  test.lox
clox/: CMakeLists.txt
clox/header/: chunk.h  common.h  compiler.h  debug.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
clox/src/: chunk.c  compiler.c  debug.c  main.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
gradle/wrapper/: gradle-wrapper.properties
jlox/: settings.gradle.kts  test.lox
jlox/src/main/kotlin/org/example/: AstPrinter.kt  Expr.kt  Lox.kt  LoxClass.kt  LoxInstance.kt  Main.kt  Parser.kt  Token.kt
jlox/syntax/: core.ebnf
src/main/kotlin/org/example/: AstPrinter.kt  Environment.kt  Expr.kt  FunctionType.kt  Interpreter.kt  Lox.kt  LoxCallable.kt  Parser.kt  Resolver.kt  Return.kt  RuntimeError.kt  Scanner.kt  Stmt.kt  TokenType.kt
syntax/: core.ebnf
